--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ inputs:
         required: true
 runs:
     using: "node12"
-    main: "build/index.js"
+    main: "dist/index.js"
 branding:
     icon: "upload-cloud"
     color: "blue"
