--- a/.github/workflows/test-itself.yaml
+++ b/.github/workflows/test-itself.yaml
@@ -3,7 +3,7 @@ on:
     push:
 jobs:
     test:
-        runs-on: ubuntu-16.04
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - uses: ./
