--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
     "name": "yandex-serverless-action",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "Github action for deploy static website to Yandex Object Storage",
     "main": "dist/index.js",
     "scripts": {
-        "build": "ncc build src/index.ts -o dist"
+        "build": "ncc build src/index.ts -o dist",
+        "dev": "tsc && node build/dev.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@actions/core": "^1.2.6",
-        "async": "^3.2.0",
-        "aws-sdk": "^2.717.0",
-        "mime-types": "^2.1.27",
-        "recursive-readdir": "^2.2.2",
-        "typescript": "^3.9.7"
+        "@actions/core": "1.10.0",
+        "async": "3.2.4",
+        "aws-sdk": "2.1246.0",
+        "glob": "8.0.3",
+        "mime-types": "2.1.35",
+        "minimatch": "5.1.0"
     },
     "devDependencies": {
-        "@types/async": "^3.2.3",
-        "@types/mime-types": "^2.1.0",
-        "@types/node": "^14.0.24",
-        "@types/recursive-readdir": "^2.2.0",
-        "@zeit/ncc": "^0.22.3"
+        "@types/async": "3.2.15",
+        "@types/glob": "^8.0.0",
+        "@types/mime-types": "2.1.1",
+        "@types/node": "18.11.9",
+        "@vercel/ncc": "0.34.0",
+        "dotenv": "16.0.3",
+        "typescript": "4.8.4"
     }
 }
