--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "license": "ISC",
     "dependencies": {
         "@actions/core": "1.10.0",
+        "@aws-sdk/client-s3": "3.310.0",
         "async": "3.2.4",
-        "aws-sdk": "2.1246.0",
-        "glob": "8.0.3",
+        "glob": "10.0.0",
         "mime-types": "2.1.35",
-        "minimatch": "5.1.0"
+        "minimatch": "9.0.0"
     },
     "devDependencies": {
-        "@types/async": "3.2.15",
-        "@types/glob": "^8.0.0",
+        "@types/async": "3.2.18",
+        "@types/glob": "8.1.0",
         "@types/mime-types": "2.1.1",
-        "@types/node": "18.11.9",
-        "@vercel/ncc": "0.34.0",
+        "@types/node": "18.15.11",
+        "@vercel/ncc": "0.36.1",
         "dotenv": "16.0.3",
-        "typescript": "4.8.4"
+        "typescript": "5.0.4"
     }
 }
