--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "Github action for deploy static website to Yandex Object Storage",
     "main": "dist/index.js",
     "scripts": {
-        "build": "ncc build src/index.ts -o dist",
-        "dev": "tsc && node build/dev.js"
+        "build": "ncc build index.ts -o dist",
+        "dev": "ts-node --files dev.ts",
+        "test": "vitest"
     },
     "keywords": [],
     "author": "",
@@ -25,6 +26,8 @@
         "@types/node": "18.15.11",
         "@vercel/ncc": "0.36.1",
         "dotenv": "16.0.3",
-        "typescript": "5.0.4"
+        "ts-node": "10.9.1",
+        "typescript": "5.0.4",
+        "vitest": "^0.30.1"
     }
 }
