--- a/.github/workflows/test-itself.yaml
+++ b/.github/workflows/test-itself.yaml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [16, 18]
+                node: ["16.x", "18.x"]
         name: Node ${{ matrix.node }} sample
         steps:
             - uses: actions/checkout@v3
